# marinero_stack

./: .gitignore  README.md  package.xml  update_subtrees.sh
marinero_simulations/: CMakeLists.txt  README.md  package.xml
marinero_simulations/config/: _4wis4wid_drive_joystick.yaml  controllers.yaml  gazebo_params.yaml  seg_marinero_rviz.rviz
marinero_simulations/launch/: _4wis4wid_drive_joystick.launch.py  controllers.launch.py  rsp.launch.py
marinero_simulations/models/Marina_Punat/: model.sdf
marinero_simulations/models/Marina_Zona_B/: model.config  model.sdf
marinero_simulations/models/Marina_Zona_C/: model.sdf
marinero_simulations/models/SMART_FIRE_cabinet/: model.config  model.sdf
marinero_simulations/models/SMART_cabinet/: model.config
marinero_simulations/models/asphalt_plane/: model.sdf
marinero_simulations/models/asphalt_plane_S/: model.config
marinero_simulations/models/asphalt_plane_XS/: model.config
marinero_simulations/models/asphalt_plane_XXS/: model.config  model.sdf
marinero_simulations/models/asphalt_plane_angle_section/: model.sdf
marinero_simulations/models/bush_pattern/: model.config
marinero_simulations/models/bush_pattern_2/: model.sdf
marinero_simulations/models/catamaran/: model.sdf
marinero_simulations/robot_description/: gazebo_control.xacro  lidar.xacro  marinero_camera.xacro  robot_core_4WIS4WID.xacro  ros2_control.xacro  rsp_marinero_robot.urdf.xacro
marinero_simulations/scripts/: segmented_sdf2marker.py
marinero_simulations/worlds/: marina_base.world  world_zona_B_objects.world  world_zona_C_objects.world
(+188 files in other folders)
